fixed some text alignment & padding, fixed showlogs.php IP display

--- a/web/dev/css/livelogs.css
+++ b/web/dev/css/livelogs.css
@@ -172,10 +172,9 @@
     padding: 10px;
 }
 
-.index_welcome {
+.text_blurb {
     margin-left: 10px;
     width: 90%;
-    text-align: center;
     padding: 10px;
 }
 
